# dspy-intro

./: .aider.conf.yml  .codegiantignore  .cursorignore  .dockerignore  .env.example  .extra_repo_ignores  .gitignore  DSPy_HOW_TO_sub-agent.md  Dockerfile  GEMINI.md  MIPRO_OPTIMIZATION_GUIDE.md  README.md  all.py  dspy_agent_classifier_credentials_passwords.py  dspy_agent_classifier_credentials_passwords_optimized.py  knowledge_graph.html  knowledge_graph_comp_nor_reuse.html  knowledge_graph_comp_one_nor.html  knowledge_graph_comp_one_reuse.html  knowledge_graph_noreuse.html  knowledge_graph_one_extract.html  knowledge_graph_pp_sig_tiny_1.html  knowledge_graph_pp_sig_tiny_2.html  knowledge_graph_pp_sig_tiny_compare.html  knowledge_graph_reuse.html  knowledge_graph_sig_compare.html  knowledge_graph_sig_orig.html  knowledge_graph_sig_tiny_1.html  knowledge_graph_sig_tiny_2.html  knowledge_graph_sig_tiny_compare.html  knowledge_graph_triplets.jsonl  pyproject.toml
.cursor/rules/: ai-models.mdc  python_uv_or_poetry_no_direct_python_call.mdc  python_uv_script_self_contained_file_dependencies_inside.mdc  shell-commands.mdc
src/: compare_graphs.py
src/classifier_credentials/: dspy_agent_classifier_credentials_passwords.py  dspy_agent_classifier_credentials_passwords_examples.py  dspy_agent_classifier_credentials_passwords_optimized.py
src/common/: constants.py  mlflow_utils.py  utils.py
src/knowledge-graph/: simple-build-kg-triplets.py
src/knowledge_graph/: __init__.py  dspy_agent_triplet_extraction_examples.py  jsonl_to_html.py  markdown_splitter.py  prompts.py  simple_build_kg_triplets.py  simple_build_kg_triplets_multi_dimension.py  simple_build_kg_triplets_optimized.py  triplet_quality_judge.py
src/simplest/: simplest_dspy.py  simplest_dspy_refine.py  simplest_dspy_rlm.py  simplest_dspy_with_attachments.py  simplest_dspy_with_contracts.py  simplest_dspy_with_images.py  simplest_dspy_with_signature_onefile.py  simplest_dspy_with_transcription.py  simplest_functai.py  simplest_tool_logging.py
src/simplest/docs/images/: notes-on-linear-and-ai-agents.md  notes-on-linear-and-ai-agents.postprocessed.md
src/text_component_extract/: extract_prompt_parts_101_guide.py  extract_sentence_parts_grammatical.py
