[project]
name = "dspy-intro"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "dspy>=3.0.4",
    "google-cloud-aiplatform",
    "mlflow",
    "attachments",
    "pydantic",
    "functai",
    "networkx",
    "matplotlib",
    "pyvis"
]

[dependency-groups]
dev = [
    "mypy",
    "ruff>=0.12.4",
    "pytest",
    "types-Markdown",
    "types-protobuf",
    "types-psutil"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
optimizer = "classifier_credentials.dspy_agent_classifier_credentials_passwords_optimized:main"
password = "classifier_credentials.dspy_agent_classifier_credentials_passwords:main"
simplestdspy = "simplest.simplest_dspy:main"
simplestdspyattach = "simplest.simplest_dspy_with_attachments:main"
simplestfunctai = "simplest.simplest_functai:main"
simplesttoollogging = "simplest.simplest_tool_logging:main"
extractprompt = "text_component_extract.extract_prompt_parts_101_guide:main"
extractgrammatical = "text_component_extract.extract_sentence_parts_grammatical:main"