[project]
name = "dspy-intro"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "dspy",
    "google-cloud-aiplatform",

    # NOTE: TEMPORARY PIN SET (needs untangling later).
    # Reason: newer transitive combinations of openai/litellm/google-genai/pydantic triggered
    # `PydanticSerializationUnexpectedValue` serializer warnings (Message / StreamingChoices)
    # when running `uv run simplesttoollogging`. These pins match the known-good environment.
    "google-genai==1.52.0",
    "litellm==1.80.5",
    "openai==2.8.1",
    "pydantic==2.12.4",

    "mlflow",
    "attachments",
    "functai",
    "networkx",
    "matplotlib",
    "pyvis"
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "types-Markdown",
    "types-protobuf",
    "types-psutil"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
optimizer = "classifier_credentials.dspy_agent_classifier_credentials_passwords_optimized:main"
password = "classifier_credentials.dspy_agent_classifier_credentials_passwords:main"
simplestdspy = "simplest.simplest_dspy:main"
simplestdspyattach = "simplest.simplest_dspy_with_attachments:main"
simplestfunctai = "simplest.simplest_functai:main"
simplesttoollogging = "simplest.simplest_tool_logging:main"
extractprompt = "text_component_extract.extract_prompt_parts_101_guide:main"
extractgrammatical = "text_component_extract.extract_sentence_parts_grammatical:main"
simplestdspysigonefile = "simplest.simplest_dspy_with_signature_onefile:main"